syntax = "proto3";

option csharp_namespace = "SimplegRPCCacheService";

package simplecache;

service Cacher {
	rpc GetKey (GetKeyRequest) returns (GetKeyResponse) {}
	rpc SetKey (SetKeyRequest) returns (SetKeyResponse) {}
	rpc ListKeys (ListKeyRequest) returns (ListKeyResponse) {}
	rpc CommandServerStream(ClientRequest) returns (stream CommandServerStreamResponse) {}
}

enum ServerRequest {
	GRACE_FULL_SHUTDOWN = 0;
	FORCE_FLUSH_CACHE = 1;
	GET_KEY = 2;
	RESET_CACHE = 3;
}

message GetKeyRequest {
	string key = 1;
}

message GetKeyResponse {
	bytes key_value = 1;
	optional bool not_found = 2;
}

message SetKeyRequest {
	string key = 1;
	bytes key_value = 2;
	optional bool remove_key = 3;
}

message SetKeyResponse {
	int32 set_key_result = 1;
	optional string error_msg = 2;
}

message ListKeyRequest {
	string key_filter = 1;
}

message ListKeyResponse {
	repeated string keys = 1;
}

message ClientRequest {
	string hostname = 1;	
	string ip = 2;	
}

message CommandServerStreamResponse {
	ServerRequest server_request = 1;
	optional string correlation_id = 2;
	optional string key = 3;
}